# pokemon-dimensionality-reduction

./: PR_Assignment1_Template_PPT.pptx  main.py  pokemon_pca_analysis.ipynb  pyproject.toml  utils.py
2/: pdf.sh  report.aux  report.blg  report.tex  twocolceurws.sty
